# OtagoCoursework

COMP151/Lab1/: test.py
COMP151/Lab10/: digits_3.txt  digits_4.txt  helen_clark.txt  m6p1q1.py  m6p1q2.py  m6p1q3.py  m6p1q4.py  m6p2q1.py  m6p2q2.py  m6p2q3.py  peter_fraser.txt  richard_seddon.txt  robert_muldoon.txt  run2.py
COMP151/Lab14/: movie_avg_ratings.csv  p3.py  p4.py  p5.py
COMP151/Lab15/: lab15ex.py
COMP151/Lab16/: 1and2labex.py
COMP151/Lab17/: m7q1.py  m7q2.py  m7q3.py  m7q4.py  run2.py
COMP151/Lab18/: barplot.py  exer.py  greenhouse-gas-emissions.xlsx  lineplot.py  p1.py
COMP151/Lab19/: exer4.py  exer5.py  exer6.py  lab19exer.py  lab19exer2nd.py  labwalk.py
COMP151/Lab2/: jack.py  m1p1.py  m1p2.py  m1p3.py  m1p4.py  m1p5.py  m1p6.py  m2p1.py  m2p2.py  m2p3.py  m2p4.py  m3p1.py  m3p3.py  q11.py
COMP151/Lab3/: 3and4.py  functions.py  m4.py  m4q2.py  more_functions.py  q8.py  stringtools.py
COMP151/Lab4/: m2p1.py  m2p2q1.py  m2p2q2.py
COMP151/Lab7/: Lab.py  Lab2xss.py  Labex.py
COMP151/Lab9/: brahe_answer_no_punc.txt  brahe_answer_word_lengths.txt  brahe_speed_reader.txt  curie_answer_capitalised.txt  ernest_rutherford.txt  frances_oldham_kelsey.txt  kelsey_answer_speed_reader.txt  kelsey_no_punc.txt  kelsey_word_lengths.txt  m5p1q1.py  m5p1q1r2.py  m5p1q2.py  m5p1q3.py  m5p2q1.py  m5p2q2.py  m5p2q3.py  m5p2q4.py  marie_curie.txt  rutherford_capitalised.txt  test.txt  testingfiles.py  tycho_brahe.txt
COMP151/Mastery_complex_support_files/: numbers_2.txt  opera_simple.txt  p1.py  p2.py  p3.py  p5.py  school_play_simple.txt  words_2.txt
COMP151/m7/: m7p1.py
COMP151/m8/: m8p1.py  m8p2.py  m8p3.py  m8p4.py  m8p5.py  m8p6.py  m8p7.py  m8p8.py  numbers_1.txt  p1.py  p2.py  school_play_opt1.txt  walk.py  words_1.txt
COMP151/m8/Mastery_complex_support_files/: opera_mega.txt
COSC203/cosc203a2/: package-lock.json  package.json  path_router.js
COSC203/cosc203a2/sql/: db_populate.sql  db_setup.sql
COSC203/cosc203a2/views/: 404-page.ejs  create.ejs  update.ejs  view.ejs
COSC203/cosc203a4/: HttpRequest.java  HttpResponse.java  ProxyCache.java
COSC204/COSC204A1/: p1.asm  p2a.asm  p2b.asm  p3a.asm  p3b.asm
COSC204/COSC204A2/: Makefile  README.md  block.txt  debug  debug.c  fs.h  joe.txt  libmemdrv.c  libmemdrv.h  memdrv.c  memdrv.ko  memdrv.mod.c  memdrvcp.c  modules.order  rand.txt  random.c  retrieve-prog  retrieve.c  sample-retrieve  sample-store  store-prog  store.c  test.txt  test1.txt  test2.txt  testlargeboi.txt
COSC326/etude1-parsingpartitions/: .gitignore  README.md  logger.py  partition_parser.py
COSC326/etude1-parsingpartitions/assets/: i0.txt  i1.txt  i10.txt  i11.txt  i12.txt  i13.txt  i2.txt  i3.txt  i4.txt  i6.txt  i7.txt  i8.txt  i9.txt  o0.txt  o1.txt  o10.txt  o11.txt  o12.txt  o2.txt  o3.txt  o4.txt  o6.txt  o9.txt
COSC326/etude1-parsingpartitions/tests/: test_partition_parser.py
COSC326/etude10-playingpartitions/: README.md  logger.py  parsing_partitions.py  playingpartitions.py
COSC326/etude10-playingpartitions/assets/: i0.txt  i1.txt  i10.txt  i2.txt  i3.txt  i4.txt  i5.txt  i6.txt  i7.txt  i8.txt  (+10 more)
COSC326/etude11-1dsolitaire/: PegGen.java  README.md  SolitaireGUI.java  SolitairePanel.java
COSC326/etude12-harmoniousnumbers/: .gitignore  README.md
COSC326/etude2-rollin/: README.md
COSC326/etude3-ants/: .gitignore  README.md
COSC326/etude4-quilt/: .gitignore  DrawingPanel.java  GenQuilt.java  QuiltFrame.java  README.md
COSC326/etude5-pathfindingpartitions/: .gitignore  README.md  logger.py  partition_parser.py  pathfinding_partition.py  test.txt
COSC326/etude6-carpets/: README.md
COSC326/etude7-anagrams/: README.md
COSC326/etude8-fourthesame/: etude8.tex
COSC326/etude9-propersocialdistancing/: README.md
COSC342/A1/: COSC342_A1_WILBE447.odt  COSC342_A1_WILBE447_v1.xml
COSC342/A2/: CMakeLists.txt  README.md  stereo.cpp  stereoFiltering.cpp
COSC342/A3/: COSC342_A3_WILBE447.pdf.odt
COSC342/A3/COSC342A3wilbe447 (2)/RenderEngineSkeletonCode2024/: CMakeLists.txt
COSC342/A3/COSC342A3wilbe447 (2)/RenderEngineSkeletonCode2024/Skeleton/: pokeball.mtl
COSC342/A3/COSC342A3wilbe447 (2)/RenderEngineSkeletonCode2024/common/: Controls.cpp  Material.cpp  Scene.hpp  Triangle.hpp
COSC342/Lab10/OpenGLShader2024/: CMakeLists.txt
COSC342/Lab10/OpenGLShader2024/Part01/: ColorShader.hpp  colorShader.frag  colorShader.vert  redTriangle.cpp
COSC342/Lab10/OpenGLShader2024/Part02/: modelLoading.cpp  textureShader.frag
COSC342/Lab10/OpenGLShader2024/common/: Quad.hpp
COSC342/Lab11/OpenGLTexturesReflection2024/: CMakeLists.txt
COSC342/Lab11/OpenGLTexturesReflection2024/Part01/: Part01  textureShader.frag  texturedCube.cpp
COSC342/Lab11/OpenGLTexturesReflection2024/Part02/: basicMaterialShader.frag  basicShading.cpp
COSC342/Lab11/OpenGLTexturesReflection2024/Part03/: PostEffect.frag  PostEffectShader.frag  renderToTexture.cpp
COSC342/Lab11/OpenGLTexturesReflection2024/common/: BasicMaterialShader.cpp  BasicMaterialShader.hpp  Controls.cpp  Mesh.cpp  Mesh.hpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.hpp
COSC342/Lab2/Lab2ImageDrawing/: CMakeLists.txt  TMatrix.cpp  aMatrix.cpp  greyScaleConversion.cpp  greyScaleWeighted.cpp  imageTransformation.cpp  ocvImageDraw.cpp  ocvTest.cpp  warpPerspec.cpp
COSC342/Lab2/OpenCVLab2024/: CMakeLists.txt  ocvTest.cpp
COSC342/Lab4/: CMakeLists.txt  TMatrix.h  features.cpp
COSC342/Lab6/Calibration/: CMakeLists.txt  stereoCalibration.cpp
COSC342/Lab8/stereo2024/: CMakeLists.txt  calibration.json  stereo.cpp
COSC342/Lab9/OpenGLIntro/: CMakeLists.txt
COSC342/Lab9/OpenGLIntro/Part01/: simpleWindow.cpp
COSC342/Lab9/OpenGLIntro/Part02/: redTriangle.cpp
COSC342/Lab9/OpenGLIntro/common/: Shader.cpp  Shader.hpp
COSC344/Lab2/: booking.txt  building.txt  lab3.sql  loadinglab3.sql  room.txt  staff.txt
COSC344/Lab3/: answers.sql  company.sql  sales.sql
COSC344/Lab4/: answer.sql
COSC344/Lab6/: company_trigger.sql  q1.sql  q2.sql  q2output.csv  q3.sql  trigger_answer.sql
COSC344/Lab8/: query1.sql
COSC344/Lab9/: alice.sql  security.sql  you.sql
(+161 files in other folders)
