CMAKE_MINIMUM_REQUIRED(VERSION "3.12")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_TOOLCHAIN_FILE "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(Lab2ImageDrawing)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(ocvTest ocvTest.cpp )
add_executable(ocvImageDraw ocvImageDraw.cpp )
add_executable(aMatrix aMatrix.cpp )
add_executable(greyScaleConversion greyScaleConversion.cpp )
add_executable(greyScaleWeighted greyScaleWeighted.cpp )
add_executable(imageTransformation imageTransformation.cpp TMatrix.cpp)
add_executable(warpPerspec warpPerspec.cpp TMatrix.cpp)
target_link_libraries(ocvTest ${OpenCV_LIBS} )
target_link_libraries(ocvImageDraw ${OpenCV_LIBS} )
target_link_libraries(aMatrix ${OpenCV_LIBS} )
target_link_libraries(greyScaleConversion ${OpenCV_LIBS} )
target_link_libraries(greyScaleWeighted ${OpenCV_LIBS} )
target_link_libraries(imageTransformation ${OpenCV_LIBS} )
target_link_libraries(warpPerspec ${OpenCV_LIBS} )