CMAKE_MINIMUM_REQUIRED(VERSION "3.12")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_TOOLCHAIN_FILE "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake")
project(OpenCVTest)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(ocvTest ocvTest.cpp)
target_link_libraries(ocvTest ${OpenCV_LIBS} )
